:sparkles: feat: Estrutura de pastas já organizada, Home page criada e já estilizada para mobile - mobile first

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@
   --background: #ffffff;
   --foreground: #171717;
 
-  --colorTextPrimay: #1C2D45;
+  --colorTextPrimary: #1C2D45;
   --colorTextSecundary: #345B93;
 
   --colorWhite: #FFFFFF;
