--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,8 +21,8 @@
   --bgColorDarkBlue: #1C2D45;
   --bgColorGray: #EDF0F2;
 
-  --font-spaceG: "Mabry Pro";
-  --font-canadaBig: "Mabry Pro";
+  --font-spaceG: "Space Grotesk", serif;
+  --font-canadaBig: "Radio Canada Big", serif;
   --font-mabryPro: "Mabry Pro";
 }
 
