:construction: ci: End Point

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,7 @@
   --bgColorDarkBlue: #1C2D45;
   --bgColorGray: #EDF0F2;
 
-  --font-spaceG: "Space Grotesk", serif;
+  --font-spaceG: "Saans TRIAL";
   --font-canadaBig: "Radio Canada Big", serif;
   --font-mabryPro: "Saans TRIAL";
   --font-saansTrial: "Saans TRIAL";
